context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.0/tasks/mvp_tasks_scorecard_form.md
# Задачи для формы создания/редактирования Скоркарты

## Обзор

**Компонент:** Форма создания/редактирования Скоркарты
**Путь в макете:** Кнопка "Создать скоркарту" → форма / Кнопка "Редактировать" на детальной → форма
**Статус:** Новая разработка

### Что включает форма:

**Основные поля:**
- Название (обязательное)
- Версия (обязательное)
- Продукт (выбор из списка, обязательное)
- Подпродукты (множественный выбор, опционально)
- Критичность (выбор: low/medium/high/critical, обязательное)
- Шаблон скоркарты (выбор из списка, обязательное)
- Конфигурация (JSON editor, обязательное)
- Финансовые эффекты (JSON editor, опционально)
- Описание (опционально)

**Функционал:**
- Создание новой скоркарты
- Редактирование существующей скоркарты
- Валидация полей
- JSON editor для конфигурации
- Загрузка конфигурации из шаблона

**Права доступа:**
- Создать может: Методолог, Админ
- Редактировать может: Методолог, Админ

---

## AN-SCF1: Аналитика формы Скоркарты

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 1 день

### Summary
Детализация требований для разработки формы создания/редактирования Скоркарты

### Description

Провести аналитику для разработки формы Скоркарты:

1. **Детализация бизнес-требований:**
   - Определить обязательные и опциональные поля
   - Уточнить правила валидации
   - Определить формат JSON конфигурации
   - Уточнить логику загрузки конфигурации из шаблона

2. **Спецификация UI/UX:**
   - Дизайн формы (поля, кнопки)
   - Спецификация JSON editor
   - Спецификация множественного выбора подпродуктов
   - Спецификация валидации
   - Сообщения об ошибках

3. **Спецификация API контракта:**
   - POST /api/scorecards/ - создание
   - PUT /api/scorecards/{id}/ - обновление
   - GET /api/scorecard-templates/{id}/default-config/ - получение конфигурации по умолчанию

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] UI/UX спецификация готова
- [ ] Формат JSON конфигурации определен
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

---

## BE-SCF1: Backend для формы Скоркарты

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 4 дня

### Summary
Разработка Backend для создания/редактирования Скоркарты

### Description

Разработать Backend для формы Скоркарты:

1. **API Endpoint: POST /api/scorecards/**

   **Параметры запроса:**
   ```json
   {
     "name": "Скоркарта Premium v2.0",
     "version": "2.0",
     "product_id": "uuid",
     "subproduct_ids": ["uuid1", "uuid2"],
     "criticality": "high",
     "template_id": "uuid",
     "configuration": {...},
     "financial_effects": {...},
     "description": "Описание скоркарты"
   }
   ```

   **Бизнес-логика:**
   - Валидация: название обязательно
   - Валидация: версия обязательна
   - Валидация: product_id обязателен и существует
   - Валидация: subproduct_ids опциональны, если указаны - должны принадлежать product
   - Валидация: criticality обязателен, один из (low/medium/high/critical)
   - Валидация: template_id обязателен и существует
   - Валидация: configuration обязателен, валидный JSON
   - Валидация: пользователь имеет право создавать (Методолог, Админ)
   - Создание скоркарты
   - Установка created_by = текущий пользователь
   - Связывание с подпродуктами (многие-ко-многим)

2. **API Endpoint: PUT /api/scorecards/{id}/**

   **Параметры запроса:**
   ```json
   {
     "name": "Обновленное название",
     "version": "2.1",
     "subproduct_ids": ["uuid1", "uuid2", "uuid3"],
     "criticality": "critical",
     "configuration": {...},
     "financial_effects": {...},
     "description": "Обновленное описание"
   }
   ```

   **Бизнес-логика:**
   - Валидация: пользователь имеет право редактировать (Методолог, Админ)
   - Обновление полей
   - Обновление связей с подпродуктами

3. **API Endpoint: GET /api/scorecard-templates/{id}/default-config/**

   **Формат ответа:**
   ```json
   {
     "configuration": {
       "threshold": 0.5,
       "weights": {...},
       "features": [...]
     }
   }
   ```

   **Бизнес-логика:**
   - Получение конфигурации по умолчанию из шаблона
   - Используется для предзаполнения формы

4. **Права доступа:**
   - Создать может: Методолог, Админ
   - Редактировать может: Методолог, Админ
   - HTTP 403 если нет прав

### Acceptance Criteria

- [ ] POST /api/scorecards/ реализован
- [ ] PUT /api/scorecards/{id}/ реализован
- [ ] GET /api/scorecard-templates/{id}/default-config/ реализован
- [ ] Валидация полей работает
- [ ] Валидация JSON работает
- [ ] Связывание с подпродуктами работает
- [ ] Права доступа реализованы
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-SCF1 (требуется спецификация)

---

## FE-SCF1: Frontend для формы Скоркарты

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Разработка UI формы создания/редактирования Скоркарты с JSON editor

### Description

Разработать Frontend для формы Скоркарты:

1. **Компонент ScorecardForm:**
   - Режим создания (create)
   - Режим редактирования (edit)
   - Валидация полей
   - JSON editor для конфигурации
   - Responsive дизайн

2. **Поля формы:**
   - Название (TextField, обязательное, max 255 символов)
   - Версия (TextField, обязательное, max 50 символов)
   - Продукт (Autocomplete, обязательное, только для создания)
   - Подпродукты (Autocomplete multiple, опционально)
   - Критичность (Select, обязательное: low/medium/high/critical)
   - Шаблон скоркарты (Autocomplete, обязательное)
   - Конфигурация (JSON editor, обязательное)
   - Финансовые эффекты (JSON editor, опционально)
   - Описание (TextField multiline, опционально)

3. **Валидация:**
   - Название: обязательное, не пустое
   - Версия: обязательное, не пустое
   - Продукт: обязательное (только при создании)
   - Критичность: обязательное
   - Шаблон: обязательное
   - Конфигурация: обязательное, валидный JSON
   - Показ ошибок под полями

4. **JSON Editor:**
   - Syntax highlighting
   - Валидация JSON в реальном времени
   - Показ ошибок парсинга
   - Кнопка "Загрузить из шаблона" (при выборе шаблона)
   - Форматирование (prettify)

5. **Autocomplete для подпродуктов:**
   - Множественный выбор
   - Фильтрация по выбранному продукту
   - Если не выбраны - скоркарта относится ко всем подпродуктам

6. **Загрузка конфигурации из шаблона:**
   - При выборе шаблона - кнопка "Загрузить конфигурацию"
   - Загружает default configuration из шаблона
   - Предупреждение если конфигурация уже заполнена

7. **Кнопки:**
   - "Отмена" - закрытие формы без сохранения
   - "Сохранить" - сохранение и переход к детальной

8. **Loading и Error состояния:**
   - Disabled кнопка "Сохранить" при отправке
   - Spinner при сохранении
   - Toast уведомления при успехе/ошибке

9. **API интеграция:**
   - ScorecardService.create(data)
   - ScorecardService.update(id, data)
   - ProductService.getList() - для выбора продукта
   - SubProductService.getList(productId) - для выбора подпродуктов
   - ScorecardTemplateService.getList() - для выбора шаблона
   - ScorecardTemplateService.getDefaultConfig(templateId) - для загрузки конфигурации
   - Обработка ошибок (400, 403, 500)

### Acceptance Criteria

- [ ] ScorecardForm компонент реализован
- [ ] Режим создания работает
- [ ] Режим редактирования работает
- [ ] Валидация полей работает
- [ ] JSON editor реализован
- [ ] Syntax highlighting работает
- [ ] Валидация JSON в реальном времени работает
- [ ] Autocomplete для продукта работает
- [ ] Autocomplete для подпродуктов работает (множественный выбор)
- [ ] Фильтрация подпродуктов по продукту работает
- [ ] Autocomplete для шаблона работает
- [ ] Загрузка конфигурации из шаблона работает
- [ ] Select для критичности работает
- [ ] Кнопки "Отмена" и "Сохранить" работают
- [ ] Loading состояние работает
- [ ] Error состояние отображается
- [ ] Toast уведомления работают
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-SCF1 (требуется UI спецификация)
- BE-SCF1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-SCF1 (1 день)
  ↓
BE-SCF1 (3 дня)
  ↓
FE-SCF1 (5 дней)
```

**Общая длительность (критический путь):** 9 дней

---

## ✅ Ключевые особенности

1. **Новая разработка** - полностью новая форма
2. **JSON editor** - для конфигурации и финансовых эффектов
3. **Syntax highlighting** - подсветка синтаксиса JSON
4. **Валидация JSON** - в реальном времени
5. **Загрузка из шаблона** - предзаполнение конфигурации
6. **Множественный выбор подпродуктов** - опционально
7. **Валидация** - обязательные поля и валидный JSON
8. **Права доступа** - только Методолог и Админ
9. **Responsive дизайн** - адаптация под разные разрешения

---